--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,25 +3,25 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --astro-code-color-text: #141520;
+  --astro-code-color-background: #ffffff;
+  --astro-code-token-constant: #14152080;
+  --astro-code-token-string: #14152050;
+  --astro-code-token-comment: #14152060;
+  --astro-code-token-keyword: #DE5E75;
+  --astro-code-token-parameter: #ffffff;
+  --astro-code-token-function: #FCA446;
+  --astro-code-token-string-expression: #5534F9;
+  --astro-code-token-punctuation: #ffffff;
+  --astro-code-token-link: #ffffff;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+/* Transition on the summary tag by faking the bottom maring*/
+details summary {
+  cursor: pointer;
+  transition: margin 150ms ease-out !important;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+details[open] summary {
+  margin-bottom: 10px;
 }
